# plutosdr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_from_container.sh  pom.xml
debian/: changelog  control  copyright  files  install
docker/: build_all.sh  trixie.Dockerfile
src/: main.c  pluto_rx.c  pluto_tx.c  pluto_util.c  pluto_util.h  plutosdr.c  plutosdrCli.c  plutosdrCli.h  plutosdr_rx.c  sigHandler.c  sigHandler.h
